fix text overflow and change manifest

--- a/src/components/projectsC/projectC.scss
+++ b/src/components/projectsC/projectC.scss
@@ -20,7 +20,7 @@ section.projects{
         color: rgb(223, 207, 207);
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         img{
             max-width: 100%;
@@ -42,6 +42,8 @@ section.projects{
             color: blue;
             background-color: unset;
             border: 0;
+            word-break: break-word;
+            white-space: normal;
         }
     }
 }
